--- a/galerie.html
+++ b/galerie.html
@@ -51,7 +51,7 @@
                         <div class="container4">
                             <div><img src="image/rugby.jpg" class="gal" id="rugby"></div>
                             <div><img src="image/marathon.jpg" class="gal"></div>
-                            <div><img src="image/pied.jpg" class="gal"></div>
+                            <div><img src="image/arc.jpg" class="gal"></div>
                             <div><img class="gal" src="image/tir.webp" alt="tir" id="tir"></div>
                         </div>
                     <!--
