--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
         </header>
         <nav>
-            <a  href="accueil.html"><img class="logo" src="logo/logo.png" alt="logo"></a>
-            <a href="accueil.html">Accueil</a>
+            <a  href="index.html"><img class="logo" src="logo/logo.png" alt="logo"></a>
+            <a href="index.html">Accueil</a>
             <a href="langlen.html">Suzanne Lenglen</a>
             <a href="galerie.html">Galerie d'images</a>
         </nav>
