--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <main class="mainaccueil">
             <section class="accueilsection">
                 <article>
-                    <h1 class="acc"><span>Bienvenue</span></h1>
+                    <h1 class="acc"><marquee behavior="alternate" direction="right" scrollamount="17px"><span>Bienvenue</span></marquee></h1>
                 <p class="accueilp">
                     Plongez dans l'univers inspirant des femmes qui repoussent les limites du sport. 
                     Que ce soit sur les pistes, dans les stades ou sur les terrains, ces athlètes incarnent la persévérance, le courage et la passion.
